# ComeCut

./: .gitattributes  README copy.md  README.md  README_ZH.md  Run-app-en.bat  Run-app-zh.bat  comecut_local_capcut_roadmap.md  draft_content.json  index.html  run.bat
python/: README.md  Untitled  pyproject.toml  requirements.txt
python/comecut_py/: __init__.py  cli.py  plugins.py
python/comecut_py/ai/: __init__.py  azure_asr.py  base.py  claude_translate.py  deepgram_asr.py  elevenlabs_tts.py  elevenlabs_voice_clone.py  gemini_translate.py  kling_video.py  luma_video.py  openai_asr.py  openai_image.py  openai_translate.py  openai_tts.py  replicate.py  runway_video.py  stability_image.py  veo_video.py  whisper_local.py
python/comecut_py/core/: __init__.py  audio_mixer.py  auto_ducking.py  beat_markers.py  capcut_exporter.py  capcut_importer.py  effect_presets.py  ffmpeg_cmd.py  keyframes.py  library_resolver.py  local_presets.py  media_cache.py  media_probe.py  project.py  project_draft_adapter.py  project_schema_v2.py  project_templates.py  store.py  subtitle_style_presets.py  text_style_presets.py  time_utils.py  transitions.py  voice_presets.py
python/comecut_py/engine/: __init__.py  (+19 more)
python/examples/: example_project.json
python/tests/: test_ai_more_providers.py  test_ai_openai.py  test_audio_fade_capcut.py  test_audio_levels.py  test_audio_pack.py  test_auto_ducking.py  test_beat_markers.py  test_bilingual_subs.py  test_capcut_exporter.py  test_capcut_importer.py  test_cli_apply_effects.py  test_cli_burn_subs_style.py  test_cli_projects.py  test_cli_render_twopass.py  test_effect_presets.py  test_effects.py  test_effects_pack.py  test_export_audio_still.py  test_export_presets.py  test_ffmpeg_cmd.py  test_generative_ai.py  test_gui_imports.py  test_i18n.py  test_inspector_audio.py  test_inspector_video.py  test_keyframes.py  test_library_persistence.py  test_library_resolver.py  test_local_presets.py  test_media_cache.py  test_media_ingest_service.py  test_plugins.py  test_preview_speed_mapping.py  test_preview_timeline_audio.py  test_preview_transform.py  test_project.py  test_project_templates.py  test_proxy.py  test_proxy_fixes.py  test_rnnoise.py  (+18 more)
(+86 files in other folders)
