[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comecut-py"
version = "0.1.0"
description = "Pure-Python port of the ComeCut video editor (CLI + PySide6 GUI, FFmpeg engine)"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.10"
authors = [{ name = "ComeCut contributors" }]
keywords = ["video", "editor", "ffmpeg", "subtitles", "srt", "vtt", "lrc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.6",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
ai = [
    "faster-whisper>=1.0",
    "requests>=2.31",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "requests>=2.31",
]
all = [
    "PySide6>=6.6",
    "faster-whisper>=1.0",
    "requests>=2.31",
]

[project.scripts]
comecut-py = "comecut_py.cli:app"

[project.urls]
Homepage = "https://github.com/mssamly01/ComeCut1"

[tool.setuptools.packages.find]
include = ["comecut_py*"]

[tool.setuptools.package-data]
"comecut_py.i18n" = ["locales/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer requires function calls in argument defaults — that's the whole API.
"comecut_py/cli.py" = ["B008"]
# GUI widgets use ambiguous unicode glyphs (full-width colon, mathematical T,
# fullwidth plus, true minus sign) on purpose to match the HTML build's look.
"comecut_py/gui/**" = ["RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
